[gd_scene load_steps=4 format=3 uid="uid://dtebeov1ncuki"]

[ext_resource type="FontFile" uid="uid://btv1o5wqq8kgj" path="res://font/Doom.fnt" id="1"]
[ext_resource type="Script" path="res://Scripts/hud.gd" id="2"]

[sub_resource type="Theme" id="1"]
default_font = ExtResource("1")

[node name="hud" type="CanvasLayer"]
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
mouse_filter = 2
theme = SubResource("1")

[node name="Stats" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_filter = 2

[node name="Labels" type="VBoxContainer" parent="MarginContainer/Stats"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="ArmorLabel" type="Label" parent="MarginContainer/Stats/Labels"]
layout_mode = 2
text = "Armor"

[node name="HealthLabel" type="Label" parent="MarginContainer/Stats/Labels"]
layout_mode = 2
text = "Health"

[node name="Values" type="VBoxContainer" parent="MarginContainer/Stats"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="ArmorValue" type="Label" parent="MarginContainer/Stats/Values"]
layout_mode = 2
text = "0"

[node name="healthValue" type="Label" parent="MarginContainer/Stats/Values"]
layout_mode = 2
text = "100"

[node name="Ammo" type="VBoxContainer" parent="MarginContainer/Stats"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 2

[node name="AmmoValue" type="Label" parent="MarginContainer/Stats/Ammo"]
layout_mode = 2
text = "0"
